--- a/jokes-app/src/App.css
+++ b/jokes-app/src/App.css
@@ -44,15 +44,16 @@
   font-size: 1.3rem;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  /* align-items: center;
+  justify-content: center; */
+  align-self: center;
   height: 100%;
   margin: 2rem 0 2rem -1rem;
   padding: 0 2rem;
   box-shadow: 0 5px 10px -3px rgba(14, 13, 26, .12), 0 3px 16px 2px rgba(7, 48, 114, .12), 0 8px 12px 1px rgba(34, 0, 51, .04);
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
-  overflow: scroll;
+  overflow-y: scroll;
   width: 70%;
 }
 
