--- a/jokes-app/src/joke.css
+++ b/jokes-app/src/joke.css
@@ -2,8 +2,9 @@
     display: flex;
     align-items: center;
     justify-content: start;
+    position: relative;
     border-bottom: 1px solid #aaaaaa;
-    padding: 1.4rem;
+    padding: 1.4rem 0 1.4rem 1.4rem;
 }
 
 .joke-buttons {
@@ -19,11 +20,20 @@
     text-align: start;
 }
 
+.joke-emoji {
+    text-align: end;
+    font-size: 2rem;
+    position: absolute;
+    right: 0;
+}
+
 .joke-votes {
     height: 50px;
     width: 50px;
     border-radius: 50%;
-    border: 1px solid red;
+    border-width: 1px;
+    border-style: solid;
+    user-select: none;
     line-height: 50px;
     box-shadow: 0 5px 10px -3px rgba(14, 13, 26, .12), 0 3px 16px 2px rgba(7, 48, 114, .12), 0 8px 12px 1px rgba(34, 0, 51, .04);
 }
